stopped spinning 'correct' from getting cut off with 'overflow: visible'

--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,8 @@ background-color: #88ebe6
 
 body {
   font-family: sans-serif;
+  border: 5px solid black;
+  height: 100vh;
 }
 
 a {
@@ -85,7 +87,7 @@ gap: 5px;
 border: none;
   animation-name: grow-spin-disappear;
   animation-duration: 5s;
-  z-index: 1;
+  z-index: 100;
   /* animation-timing-function: ease-in-out; */
 }
 .reply {
